# akonadi-e2e-tests

./: .gdb_history  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  REUSE.toml  conftest.py  pyproject.toml
docker/: Makefile
docker/cyrus/: Dockerfile  cyrus.conf  imapd.conf
docker/dovecot/: Dockerfile  dovecot.conf
docker/nextcloud/: Dockerfile
docker/radicale/: Dockerfile
fixtures/: __init__.py  akonadi.py  cyrus.py  dbus.py
src/akonadi/: __init__.py  client.py  dav_resource.py  dbus.py  env.py  imap_resource.py  itip_handler.py  resource.py  server.py  test_utils.py  utils.py
src/akonadi/dbus/: client.py
src/akonadi/dbus/interfaces/: org_freedesktop_akonadi_agent_control.py  org_freedesktop_akonadi_agent_manager.py  org_freedesktop_akonadi_controlmanager.py  org_freedesktop_akonadi_resource.py  org_freedesktop_akonadi_server.py  org_kde_akonadi_davgroupware_settings.py  org_kde_akonadi_imap_resource.py  org_kde_akonadi_imap_settings.py
src/akonadi/dbus/interfaces/xml/: org.kde.Akonadi.Imap.Resource.xml  org.kde.Akonadi.Imap.Settings.xml
src/akonadi/model/: __init__.py  agent.py  collection.py  item.py
src/dav/: client.py  dav_server.py  dav_utils.py  nextcloud_server.py  radicale_server.py  test_utils.py
src/factories/: email_factory.py  event_factory.py  itip_factory.py  providers.py
src/factories/itip/: google_factory.py
src/imap/: __init__.py  client.py  cyrus_server.py  dovecot_server.py  email_utils.py  imap_server.py  mailbox_with_original_payload.py  test_utils.py
src/itip/: __init__.py  const.py  test_utils.py  utils.py
src/kwallet/: client.py
src/kwallet/interfaces/: org_kde_kwallet.py
src/test/: __init__.py  color.py  wait.py
tests/: test_infra.py
tests/dav/: test_generic_dav.py  test_resource_to_server_dav.py  test_server_to_resource_dav.py
tests/imap/: test_conflict_imap.py  test_generic_imap.py  test_resource_to_server_imap.py  test_server_to_resource_imap.py
tests/itip/: test_resource_to_server_itip.py
tests/selftest/: test_factories.py  test_imap_client.py  test_infra.py
