# SPDX-FileContributor: Daniel Vrátil <dvratil@kde.org>
#
# SPDX-License-Identifier: GPL-2.0-or-later

[project]
name = "akonadi-e2e-tests"
version = "0.1.0"
description = "E2E tests for Akonadi Resources"
readme = "README.md"
requires-python = ">=3.13"
# Most of those dependencies would normally be in dev-dependencies, but since tests
# >are< the main usage of this package, we list them here.
dependencies = [
    "aioimaplib>=2.0.1",
    "camel-converter>=4.0.1",
    "mypy>=1.15.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mypy>=1.0.1",
    "pytest-order>=1.3.0",
    "pytest-ruff>=0.4.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.9",
    "sdbus>=0.14.0",
    "xdg-base-dirs>=6.0.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--ruff --ruff-format --mypy -v"


[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "redefined-outer-name",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
]
