# SPDX-FileCopyrightText: Daniel Vrátil <dvratil@kde.org>
#
# SPDX-License-Identifier: GPL-2.0-or-later

[project]
name = "akonadi-e2e-tests"
version = "0.1.0"
description = "E2E tests for Akonadi Resources"
readme = "README.md"
requires-python = ">=3.13"
# Most of those dependencies would normally be in dev-dependencies, but since tests
# >are< the main usage of this package, we list them here.
dependencies = [
    "aiohttp>=3.13.3",
    "caldav>=1.6.0",
    "camel-converter>=4.0.1",
    "imap-tools>=1.11.1",
    "lxml>=6.0.2",
    "mypy>=1.15.0",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mypy>=1.0.1",
    "pytest-order>=1.3.0",
    "pytest-ruff>=0.4.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.9",
    "sdbus>=0.14.0",
    "testcontainers>=4.10.0",
    "xdg-base-dirs>=6.0.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["tests", "src"]
pythonpath = ["src"]
addopts = "-v"

[tool.mypy]
explicit_package_bases = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "redefined-outer-name",
]

[tool.ruff]
line-length = 100
output-format = "full"

[tool.ruff.lint]
select = ["E", "F", "I", "PERF", "ARG", "W", "UP", "B", "SIM"]
ignore = [
    "E1", # handled by formatter
    "E4", # handled by formatter
    "E5", # handled by formatter
    "PERF203", # Too many false positives
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 99

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "pytest>=8.3.5",
    "types-caldav>=1.3.0.20250516",
    "types-psutil>=7.0.0.20250516",
]
